[package]
name = "jufo2024-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
chksum = { version = "0.2.2", default_features = false, features = ["md5"] }
fastrand = "2.0.1"
itertools = "0.12.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
simple-websockets = "0.1.6"
thiserror = "1.0.50"
